--- a/src/components/homepage/ButtonGroup.astro
+++ b/src/components/homepage/ButtonGroup.astro
@@ -1,5 +1,6 @@
 ---
 import Icon from '@components/molecules/Icon.svelte';
+import { t } from '@/lib/i18n-service';
 
 interface Props {
   links: {
@@ -8,13 +9,14 @@ interface Props {
     icon: string;
     isCta: boolean;
   }[];
+  lang?: string;
 }
 
-const { links } = Astro.props;
+const { links, lang = 'en' } = Astro.props;
 
 ---
 
-<div class="button-wrap">
+<div class="button-wrap hidden-button-group">
   {links.map(link => (
     <a href={link.url} class={link.isCta ? 'cta' : ''}><Icon name={link.icon} size={2} />{link.title}</a>
   ))}
@@ -63,4 +65,8 @@ const { links } = Astro.props;
     align-items: center;
   }
 }
+  
+  .hidden-button-group {
+    display: none !important;
+  }
 </style>
