--- a/src/pages/web-check-api/spec.astro
+++ b/src/pages/web-check-api/spec.astro
@@ -5,8 +5,8 @@ import Footer from '@components/scafold/Footer.astro';
 ---
 
 <BaseLayout
-  title="API Docs | Web Check"
-  description="API documentation for the Web Check backend REST endpoints"
+  title="API Docs | Website Check"
+  description="API documentation for the Website Check backend REST endpoints"
 >
   <Fragment slot="head">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.3/swagger-ui.css">
