--- a/src/components/homepage/SponsorSegment.astro
+++ b/src/components/homepage/SponsorSegment.astro
@@ -9,7 +9,7 @@ const ctaLinkText = 'Terminal Trove Newsletter';
 const ctaImageSrc = 'https://i.ibb.co/5jJ4bzZ/terminal-trove-cta.png';
 ---
 
-<div class="sponsored-but-dont-block">
+<div class="sponsored-but-dont-block hidden-sponsor">
   <div>
     <h5>Sponsored by <a href={sponsorLink}>{sponsorName}</a></h5>
     <p>
@@ -58,5 +58,9 @@ const ctaImageSrc = 'https://i.ibb.co/5jJ4bzZ/terminal-trove-cta.png';
       width: 20rem;
       border-radius: 3px;
     }
+  }
+  
+  .hidden-sponsor {
+    display: none !important;
   }
 </style>
