--- a/src/components/homepage/TempDisabled.astro
+++ b/src/components/homepage/TempDisabled.astro
@@ -1,6 +1,6 @@
 <div class="banner">
   <p>
-    ⚠️ Web Check is temporarily disabled due to excess demand and associated costs. 
+    ⚠️ Website Check is temporarily disabled due to excess demand and associated costs. 
     We apologize for any inconvenience and are working on a solution.
   </p>
 </div>
