--- a/src/pages/account/index.astro
+++ b/src/pages/account/index.astro
@@ -3,31 +3,34 @@ import BaseLayout from '@layouts/Base.astro';
 import NavBar from '@components/scafold/Nav.astro';
 import Footer from '@components/scafold/Footer.astro';
 import Icon from '@components/molecules/Icon.svelte';
+import { t } from '@/lib/i18n-service';
+
+const url = new URL(Astro.request.url);
+const currentLang = url.searchParams.get('lang') || 'en';
 
 ---
 
 <BaseLayout
-  title="Account | Web Check"
-  description="Login or sign up for a free account on Web Check, to manage API access, save reports, enable website change notificiations and more!"
+  title={`${t('account.title', currentLang)} | Website Check`}
+  description={t('account.description', currentLang)}
 >
   <div class="web-check-page">
-    <NavBar />
+    <NavBar currentLang={currentLang} />
     <main>
       <!-- <h1>Login</h1>
       <p>
-        Your Web Check account is your gateway to managing API access, as well as additional functionality
+        Your Website Check account is your gateway to managing API access, as well as additional functionality
       </p> -->
 
       <div class="under-development">
-        <h4>Account management is currently under development.</h4>
+        <h4>{t('account.under_development', currentLang)}</h4>
         <p>
-          Once complete, you will be able to login to your account to manage API
-          access, save reports, enable website change notificiations and more!
+          {t('account.future_features', currentLang)}
         </p>
       </div>
 
     </main>
-    <Footer />
+    <Footer lang={currentLang} />
   </div>
 </BaseLayout>
 
@@ -48,7 +51,7 @@ import Icon from '@components/molecules/Icon.svelte';
     }
     .under-development {
       border: 2px solid var(--warning);
-      background: #ffff0012;
+      background: var(--primary-transparent);
       padding: 1rem;
       margin: 2rem auto;
       border-radius: 4px;
